2024-02-aks-argocd-pipeline/Application/app-01/deployment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-01
  name: app-01
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-01
  template:
    metadata:
      labels:
        app: app-01
    spec:
      containers:
        - name: app-01
          image: crj5yn5abgxaivw.azurecr.io/app-01:__Build.BuildId__
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "512Mi"
              cpu: "256m"
            requests:
              memory: "256Mi"
              cpu: "128m"
