2024-02-aks-argocd-pipeline/Application/app-01/deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-01
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: app-01
